Trigessimo Quinto Commit

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -60,6 +60,7 @@
   "Manage API Tokens": "Gerenciador de Tokens de API",
   "Manage Account": "Gerenciar Conta",
   "Manage and log out your active sessions on other browsers and devices.": "Gerencie e saia de suas sessões ativas em outros navegadores e dispositivos.",
+  "First Name": "Primeiro Nome",
   "Name": "Nome",
   "Nevermind": "Deixa pra lá",
   "New Password": "Nova Senha",
